--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@ coverage
 build/Release
 
 # Dependency directory
-node_modules
+node_modules/
+semantic-ui/
 
 # Optional npm cache directory
 .npm
