--- a/package.json
+++ b/package.json
@@ -19,8 +19,19 @@
   "dependencies": {
     "angular": "^1.5.2",
     "angular-route": "^1.5.2",
+    "gulp-print": "^2.0.1",
     "semantic-ui": "^2.1.8"
   },
   "devDependencies": {
+    "eslint": "*",
+    "eslint-config-angular": "*",
+    "eslint-plugin-angular": "*",
+    "gulp-angular-filesort": "*",
+    "gulp-concat": "*",
+    "gulp-eslint": "*",
+    "eslint-plugin-html": "*",
+    "gulp-load-plugins": "*",
+    "gulp-ng-annotate": "*",
+    "gulp-uglify": "*"
   }
 }
