--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -91,8 +91,8 @@
     "angular/typecheck-number": 2,
     "angular/typecheck-object": 2,
     "angular/typecheck-string": 2,
-    "angular/watchers-execution": [0, "$digest"],
-    "angular/window-service": 2
+    "angular/watchers-execution": [0, "$digest"]
+    // "angular/window-service": 2
   },
   "globals": {
     "angular": false
