--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "angular": "^1.5.2",
     "angular-route": "^1.5.2",
+    "angulartics": "^1.0.3",
+    "angulartics-google-analytics": "^0.1.4",
     "jquery": "^2.2.2",
     "semantic-ui": "^2.1.8"
   },
