added sending survey to aws

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -97,7 +97,10 @@
   "plugins": [
     "angular", "html"
   ],
+  "env": {
+    "browser":true
+  },
   "globals": {
-    "angular": false
+    "angular":true
   }
 }
