--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "angular-route": "^1.5.2",
     "angulartics": "^1.0.3",
     "angulartics-google-analytics": "^0.1.4",
-    "bowser": "^1.0.0",
+    "gulp-markdown": "^1.2.0",
+    "gulp-marked": "^1.0.0",
+    "gulp-showdown": "0.0.3",
+    "highlight.js": "^9.2.0",
     "jquery": "^2.2.2",
     "semantic-ui": "^2.1.8"
   },
