added locale files to practical startpage

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "distDev/ui-angular"]
 	path = distDev/ui-angular
 	url = https://github.com/PD75/ui-angular
+[submodule "distDev/practical-startpage"]
+	path = distDev/practical-startpage
+[submodule "distDev/practical-startpage"]
+	url = https://github.com/PD75/practical-startpage
